hphp/hack/test/typecheck/string_no_call.php
<?hh

function f(string $s): void {
  \HH\String\__primitive_length($s);
}
